# mp-writer-mcp-server

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  openai-config-example.json  test-client.sh
docs/: API_TESTING_GUIDE.md  CONFIGURATION_EXAMPLES.md  DEEP_RESEARCH_INTEGRATION.md  QUICK_REFERENCE.md  technical-plan-mcp-research.md
scripts/: README.md  generate-api-key.sh  test-integration.sh
src/: lib.rs  main.rs
src/config/: dto.rs  loader.rs  mod.rs
src/core/: cache.rs  error.rs  http_client.rs  mod.rs
src/features/: mod.rs
src/features/mcp/: dto.rs  handler.rs  helpers.rs  mod.rs  schemas.rs  service.rs
src/features/parliament/: client.rs  dto.rs  handler.rs  helpers.rs  mod.rs
src/features/research/: dto.rs  handler.rs  helpers.rs  mod.rs  service.rs
src/features/utilities/: dto.rs  handler.rs  mod.rs  time_service.rs
src/server/: auth.rs  mod.rs  state.rs
tests/: mcp_schema_tests.rs  research_tests.rs
