[package]
name = "mp-writer-mcp-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonschema = "0.17"
reqwest = { version = "0.12", features = ["json"] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
urlencoding = "2"
sled = "0.34"
async-trait = "0.1"
roxmltree = "0.18"
chrono = { version = "0.4", features = ["clock", "serde"] }
chrono-tz = "0.8"
csv = "1"

[dev-dependencies]
tempfile = "3"
